--- a/index.html
+++ b/index.html
@@ -1,2 +1,4 @@
 <canvas id="c"></canvas>
 <div class="info">Click to add gravity point.</div>
+<link rel="stylesheet" href="style.css">
+<script src="script.js"></script>
