--- a/index.html
+++ b/index.html
@@ -2,3 +2,4 @@
 <div class="info">Click to add gravity point.</div>
 <link rel="stylesheet" href="style.css">
 <script src="script.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.7.9/dat.gui.min.js"></script>
