--- a/index.html
+++ b/index.html
@@ -1,5 +1,17 @@
-<canvas id="c"></canvas>
-<div class="info">Click to add gravity point.</div>
-<link rel="stylesheet" href="style.css">
-<script src="script.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.7.9/dat.gui.min.js"></script>
+<!DOCTYPE html>
+<html lang="de">
+<head>
+    <meta charset="UTF-8">
+    <title>Gravity Particles</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <canvas id="c"></canvas>
+    <div class="info">Click to add gravity point.</div>
+
+    <!-- dat.GUI Bibliothek -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.7.9/dat.gui.min.js"></script>
+    <!-- Eigenes Script -->
+    <script src="script.js"></script>
+</body>
+</html>
